--- a/maps/index.html
+++ b/maps/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="./src/styles.css" />
+    <title>Client Location</title>
+  </head>
   <body>
     <div id="map" style="height: 100%"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
